# axis-accessibility-api

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-stack-selection.md  0002-uuid7-identifiers.md  0003-llm-scope.md  0004-local-embeddings.md  template.md
docs/storefront/: EdgeF-4-profile-README.md
src/axis/: __init__.py  config.py  ids.py  main.py
src/axis/api/: __init__.py
src/axis/api/v1/: __init__.py  auth.py  deps.py  dlq.py  health.py  jobs.py  pagination.py  review.py  router.py  schemas.py  search.py  taxonomy.py  venues.py
src/axis/auth/: __init__.py  jwt.py  passwords.py  principal.py  rbac.py  refresh.py
src/axis/db/: __init__.py  base.py  seed.py  seed_iam.py
src/axis/db/migrations/: env.py  script.py.mako
src/axis/db/migrations/versions/: 0001_init.py  0002_defer_supersedes_fk.py  0003_hnsw_index.py
src/axis/db/models/: __init__.py  datapoint.py  enums.py  iam.py  ingestion.py  mixins.py  taxonomy.py  venue.py
src/axis/db/queries/: __init__.py  search.py  venues.py
src/axis/domain/: __init__.py  reconciliation.py  types.py
src/axis/embeddings/: __init__.py  fake.py  local.py  provider.py
src/axis/extraction/: __init__.py  anthropic_provider.py  fake.py  prompts.py  provider.py  schemas.py
src/axis/ingestion/: __init__.py  circuit.py  embedding.py  idempotency.py  persist.py  pipeline.py  retry.py  tasks.py
src/axis/observability/: __init__.py  logging.py  metrics.py  middleware.py  rate_limit.py  tracing.py
src/axis/seed/: __init__.py  taxonomy_v1.json
tests/: conftest.py  test_import_discipline.py
tests/integration/: conftest.py  test_auth_flows.py  test_dlq_replay.py  test_health_api.py  test_iam_seed.py  test_ingestion_api.py  test_ingestion_pipeline.py  test_migration_roundtrip.py  test_models_persistence.py  test_observability_endpoint.py  test_rbac.py  test_review_api.py  test_review_extra.py  test_semantic_search.py  test_taxonomy_api.py  test_taxonomy_seed.py  test_venues_api.py
tests/unit/: test_anthropic_provider.py  test_arq_tasks_module.py  test_circuit.py  test_embedding_text.py  test_fake_embedder.py  test_fake_extractor.py  test_ids.py  test_jwt.py  test_observability.py  test_pagination.py  test_passwords.py  test_prompts.py  test_reconciliation.py  test_retry.py  test_taxonomy_snapshot.py
