# =============================================================================
# AXIS — Accessibility Intelligence API
# Build, lint, type-check, and test configuration.
# Stack locked by docs/adr/0001-stack-selection.md.
# =============================================================================

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "axis"
version = "0.1.0"
description = "Accessibility Intelligence API — structured taxonomy + AI extraction for the physical world."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Enrique C.", email = "edgef40@gmail.com" }]
keywords = ["accessibility", "fastapi", "ai", "pgvector", "ingestion", "taxonomy"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]

dependencies = [
  # --- web ---
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.30,<0.35",
  # --- data plane ---
  "sqlalchemy[asyncio]>=2.0.30,<2.1",
  "asyncpg>=0.29,<0.31",
  "alembic>=1.13,<1.15",
  "pgvector>=0.3.5,<0.4",
  # --- identifiers ---
  "uuid-utils>=0.9,<1.0",   # UUID v7 (ADR-0002)
  # --- validation ---
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  # --- auth ---
  "pyjwt[crypto]>=2.9,<3.0",
  "passlib[argon2]>=1.7.4,<1.8",
  # --- broker / cache / jobs ---
  "redis>=5.0,<6.0",
  "arq>=0.26,<0.27",
  # --- LLM provider ---
  "anthropic>=0.34,<1.0",
  # --- observability ---
  "structlog>=24.1,<25.0",
  "opentelemetry-api>=1.25,<2.0",
  "opentelemetry-sdk>=1.25,<2.0",
  "opentelemetry-exporter-otlp>=1.25,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0,<1.0",
  "prometheus-client>=0.20,<1.0",
  # --- rate limiting ---
  "slowapi>=0.1.9,<0.2",
  # --- http client (for partner integrations, OTel propagation) ---
  "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
dev = [
  # --- test ---
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.25",
  "pytest-cov>=5.0,<6.0",
  "testcontainers[postgres,redis]>=4.5,<5.0",
  "httpx>=0.27,<0.29",
  # --- lint / type ---
  "ruff>=0.6,<0.8",
  "mypy>=1.11,<2.0",
  "types-passlib",
  # --- tooling ---
  "pre-commit>=3.7,<4.0",
]

[project.urls]
Homepage = "https://github.com/EdgeF-4/axis-accessibility-api"
Repository = "https://github.com/EdgeF-4/axis-accessibility-api"
Issues = "https://github.com/EdgeF-4/axis-accessibility-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/axis"]

[tool.hatch.build.targets.sdist]
include = ["src/axis", "README.md", "LICENSE", "pyproject.toml"]

# -----------------------------------------------------------------------------
# Ruff — lint + format, replaces flake8 / isort / black.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "B",          # flake8-bugbear
  "UP",         # pyupgrade
  "N",          # pep8-naming
  "S",          # flake8-bandit (security)
  "C4",         # flake8-comprehensions
  "SIM",        # flake8-simplify
  "RUF",        # ruff-specific
  "TCH",        # flake8-type-checking
  "ASYNC",      # flake8-async
  "PIE",
  "PT",         # pytest style
  "RET",        # return statements
  "TID",        # tidy imports
]
ignore = [
  "E501",       # line length — ruff format handles
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",       # assert in tests
  "S105", "S106", "S107",  # hardcoded test credentials
  "PLR2004",    # magic numbers in tests
]
"src/axis/db/migrations/**" = [
  "N999",       # alembic revision filenames
]
"src/axis/db/models/**" = [
  # SQLAlchemy 2.0 resolves Mapped[T] annotations at runtime (even under
  # ``from __future__ import annotations``), so types used in mappers must
  # be at module scope, not in a TYPE_CHECKING block.
  "TC001", "TC002", "TC003",
]
"src/axis/api/**" = [
  # FastAPI introspects parameter types at runtime to decide between Form,
  # Body, Query, and Depends. Annotated[OAuth2PasswordRequestForm, Depends()]
  # and friends therefore require the type at module scope.
  "TC001", "TC002", "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["axis"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -----------------------------------------------------------------------------
# mypy — strict. Every `Any` must be justified inline with `# noqa` or comment.
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
show_error_context = true
pretty = true
files = ["src/axis", "tests"]

[[tool.mypy.overrides]]
# Third-party libs without type stubs we accept as untyped imports.
module = [
  "passlib.*",
  "slowapi.*",
  "arq.*",
  "pgvector.*",
  "testcontainers.*",
  "sentence_transformers",
  "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
# The dynamic-alias warning fires on AliasChoices (used to honour
# ANTHROPIC_API_KEY without the AXIS_ prefix); pydantic-settings handles
# the runtime correctly, so the warning is noise.
warn_required_dynamic_aliases = false

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=axis",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
markers = [
  "integration: tests that hit a real Postgres / Redis via testcontainers",
  "slow: tests that take > 1s; excluded from the default fast loop",
]

[tool.coverage.run]
branch = true
# ``source_pkgs`` (the package name) lets coverage.py track lines whether
# the module is executed via the src/ checkout or the installed editable
# wheel — the path-based ``source`` form silently misses one of them.
source_pkgs = ["axis"]
# httpx ASGITransport drives async route handlers in a thread pool;
# without ``thread`` concurrency, coverage.py undercounts every line in
# the body of an async endpoint. Greenlet covers SQLAlchemy 2.0 async.
concurrency = ["thread", "greenlet"]
omit = [
  "*/axis/db/migrations/*",
  "*/axis/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
